Use JDK 17 for running tests